--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
             <!-- Box 3 -->
             <div class="box">
-                <img src="/Images/mackerel-product.jpeg" alt="">
+                <img src="/Images/Profile" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Mackerel <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
