--- a/category5.html
+++ b/category5.html
@@ -37,7 +37,7 @@
     <!-- Products -->
     <section class="products" id="products">
         <div class="heading">
-            <h1>Our Popular<br><span>Products</span></h1>
+            <h1>Our Products<br><span>Oranges</span></h1>
         </div>
         <!-- Product Content -->
         <div class="products-container">
