--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@
         <div class="products-container">
             <!-- Box 1 -->
             <div class="box">
-                <img src="Images/eggs-product.jpeg" alt="">
+                <img src="/Images/eggs-product.jpeg" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Eggs <br>1 Crate 1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -53,7 +53,7 @@
             </div>
             <!-- Box 2 -->
             <div class="box">
-                <img src="Images/chicken-breast.png" alt="">
+                <img src="/Images/chicken-breast.png" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Chicken Breast <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -63,7 +63,7 @@
             </div>
             <!-- Box 3 -->
             <div class="box">
-                <img src="Images/mackerel-product.jpeg" alt="">
+                <img src="/Images/mackerel-product.jpeg" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Mackerel <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -73,7 +73,7 @@
             </div>
             <!-- Box 4 -->
             <div class="box">
-                <img src="Images/groundnut-product.jpeg" alt="">
+                <img src="/Images/groundnut-product.jpeg" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Groundnut <br>1 Crate 1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -83,7 +83,7 @@
             </div>
             <!-- Box 5 -->
             <div class="box">
-                <img src="Images/chicken-drumsticks.jpg" alt="">
+                <img src="/Images/chicken-drumsticks.jpg" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Chicken Drumsticks <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -93,7 +93,7 @@
             </div>
             <!-- Box 6 -->
             <div class="box">
-                <img src="Images/corn-product.png" alt="">
+                <img src="/Images/corn-product.png" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Whole Corn <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -103,7 +103,7 @@
             </div>
             <!-- Box 7 -->
             <div class="box">
-                <img src="Images/rice-product.jpeg" alt="">
+                <img src="/Images/rice-product.jpeg" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>White Rice <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -113,7 +113,7 @@
             </div>
             <!-- Box 8 -->
             <div class="box">
-                <img src="Images/catfish-product.jpeg" alt="">
+                <img src="/Images/catfish-product.jpeg" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Catfish <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
@@ -123,7 +123,7 @@
             </div>
             <!-- Box 9 -->
             <div class="box">
-                <img src="Images/oranges-product.jpeg" alt="">
+                <img src="/Images/oranges-product.jpeg" alt="">
                 <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Oranges <br>1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
