--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#" class="logo"><i class="bx bxs-basket"></i>  Jolat Farms</a>
+        <a href="index.html#home" class="logo"><i class="bx bxs-basket"></i>  Jolat Farms</a>
         <!-- Menu Icon -->
 
         <div class="bx bx-menu" id="menu-icon"></div>
@@ -104,36 +104,36 @@
             <!-- Box 1 -->
             <div class="box box1">
                 <img src="Images/chicken.png" alt="">
-                <h2>Chicken</h2>
+                <h2>Poultry</h2>
                 <span>8 Items</span>
                 <a href="category1.html"><i class="bx bx-right-arrow-alt"></i></a>
                 
             </div>
              <!-- Box 2 -->
              <div class="box box2">
-                <img src="Images/eggs.png" alt="">
-                <h2>Eggs</h2>
+                <img src="Images/vegetables.png" alt="">
+                <h2>Vegetables</h2>
                 <span>10 Items</span>
                 <a href="category2.html"><i class="bx bx-right-arrow-alt"></i></a>
             </div>
              <!-- Box 3 -->
              <div class="box box3">
                 <img src="Images/fish.png" alt="">
-                <h2>Fish</h2>
+                <h2>Seafood</h2>
                 <span>20 Items</span>
                 <a href="category3.html"><i class="bx bx-right-arrow-alt"></i></a>
             </div>
              <!-- Box 4 -->
              <div class="box box4">
                 <img src="Images/apples.png" alt="">
-                <h2>Apples</h2>
+                <h2>Fruits</h2>
                 <span>6 Items</span>
                 <a href="category4.html"><i class="bx bx-right-arrow-alt"></i></a>
             </div>
              <!-- Box 5 -->
              <div class="box box5">
-                <img src="Images/oranges.png" alt="">
-                <h2>Oranges</h2>
+                <img src="Images/fertilizer.png" alt="">
+                <h2>Fertilizer</h2>
                 <span>8 Items</span>
                 <a href="category5.html"><i class="bx bx-right-arrow-alt"></i></a>
             </div>
