--- a/category1.html
+++ b/category1.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#" class="logo"><i class="bx bxs-basket"></i>  Jolat Farms</a>
+        <a href="index.html#home" class="logo"><i class="bx bxs-basket"></i>  Jolat Farms</a>
         <!-- Menu Icon -->
 
         <div class="bx bx-menu" id="menu-icon"></div>
@@ -37,7 +37,7 @@
     <!-- Products -->
     <section class="products" id="products">
         <div class="heading">
-            <h1>Our Products<br><span>Chicken</span></h1>
+            <h1>Our Products<br><span>Poultry</span></h1>
         </div>
         <!-- Product Content -->
         <div class="products-container">
