--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#" class="logo"><i class="bx bxs-basket"></i>  Jolat Farms</a>
+        <a href="index.html#home" class="logo"><i class="bx bxs-basket"></i>  Jolat Farms</a>
         <!-- Menu Icon -->
 
         <div class="bx bx-menu" id="menu-icon"></div>
