--- a/category1.html
+++ b/category1.html
@@ -50,7 +50,7 @@
             <!-- Box 1 -->
             <div class="box">
                 <img src="Images/eggs-product.jpeg" alt="">
-                <span>Fresh Item</span>
+                <span>Fresh Items</span>
                 <h2>Farm Fresh <br>Eggs <br>1 Crate 1.5 Kg</h2>
                 <h3 class="price">₦2,700 <span>/Kg</span></h3>
                 <i class='bx bx-cart-alt'></i>
